// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook snapshot tests Storyshots ACS Components/CameraSettings Camera Settings 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-Dropdown-container"
      >
        <label
          className="ms-Label ms-Dropdown-label label-19"
          id="Dropdown2-label"
        >
          Camera
        </label>
        <div
          aria-disabled={false}
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="Dropdown2-label Dropdown2-option"
          className="ms-Dropdown dropdown-3"
          data-is-focusable={true}
          id="Dropdown2"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <span
            aria-atomic={true}
            aria-invalid={false}
            aria-live="polite"
            aria-posinset={1}
            aria-selected={true}
            aria-setsize={3}
            className="ms-Dropdown-title title-4"
            id="Dropdown2-option"
            role="option"
          >
            Logitech WebCam
          </span>
          <span
            className="ms-Dropdown-caretDownWrapper caretDownWrapper-5"
          >
            <i
              aria-hidden={true}
              className="root-37 ms-Dropdown-caretDown caretDown-21"
              data-icon-name="ChevronDown"
            >
              
            </i>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ErrorBar Error Bar Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        aria-describedby="MessageBar0"
        className="ms-MessageBar ms-MessageBar--error ms-MessageBar-singleline ms-MessageBar-dismissalSingleLine root-2"
        role="region"
      >
        <div
          className="ms-MessageBar-content content-3"
        >
          <div
            aria-hidden={true}
            className="ms-MessageBar-icon iconContainer-4"
          >
            <i
              aria-hidden={true}
              className="root-37 icon-12"
              data-icon-name="ErrorBadge"
            >
              
            </i>
          </div>
          <div
            aria-live="assertive"
            className="ms-MessageBar-text text-6"
            id="MessageBar0"
            role="status"
          >
            <span
              className="ms-MessageBar-innerText innerText-7"
            />
          </div>
          <div
            className="ms-MessageBar-dismissSingleLine"
          >
            <button
              aria-label="Close"
              className="ms-Button ms-Button--icon ms-MessageBar-dismissal dismissal-13"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Close"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-14"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-21 ms-Button-icon icon-16"
                  data-icon-name="Clear"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/GridLayout Grid Layout Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "height": "500px",
            "width": "600px",
          }
        }
      >
        <div
          className="css-62"
          style={
            Object {
              "gridTemplateColumns": "repeat(2, 1fr)",
              "gridTemplateRows": "repeat(2, minmax(0, 1fr))",
            }
          }
        >
          <div
            className="ms-Stack css-4"
          >
            <div
              className="ms-Stack css-5"
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <div
                className="ms-Persona ms-Persona--size100 root-6"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-13"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-15"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-18"
                    >
                      <span>
                        M
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-21"
            >
              <label>
                Michael
              </label>
            </div>
          </div>
          <div
            className="ms-Stack css-4"
          >
            <div
              className="ms-Stack css-5"
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <div
                className="ms-Persona ms-Persona--size100 root-6"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-13"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-15"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-22"
                    >
                      <span>
                        J
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-21"
            >
              <label>
                Jim
              </label>
            </div>
          </div>
          <div
            className="ms-Stack css-4"
          >
            <div
              className="ms-Stack css-5"
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <div
                className="ms-Persona ms-Persona--size100 root-6"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-13"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-15"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-23"
                    >
                      <span>
                        P
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-21"
            >
              <label>
                Pam
              </label>
            </div>
          </div>
          <div
            className="ms-Stack css-4"
          >
            <div
              className="ms-Stack css-5"
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <div
                className="ms-Persona ms-Persona--size100 root-6"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-13"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-15"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-24"
                    >
                      <span>
                        D
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-21"
            >
              <label>
                Dwight
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/MicrophoneSettings Microphone Settings 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-Dropdown-container"
      >
        <label
          className="ms-Label ms-Dropdown-label label-19"
          id="Dropdown0-label"
        >
          Microphone
        </label>
        <div
          aria-disabled={false}
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="Dropdown0-label Dropdown0-option"
          className="ms-Dropdown dropdown-3"
          data-is-focusable={true}
          id="Dropdown0"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <span
            aria-atomic={true}
            aria-invalid={false}
            aria-live="polite"
            aria-posinset={1}
            aria-selected={true}
            aria-setsize={3}
            className="ms-Dropdown-title title-4"
            id="Dropdown0-option"
            role="option"
          >
            Headphones (Buy More Brand)
          </span>
          <span
            className="ms-Dropdown-caretDownWrapper caretDownWrapper-5"
          >
            <i
              aria-hidden={true}
              className="root-37 ms-Dropdown-caretDown caretDown-21"
              data-icon-name="ChevronDown"
            >
              
            </i>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ParticipantItem Participant Item Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="css-2"
        onClick={[Function]}
      >
        <div
          className="ms-Persona ms-Persona--size32 root-3"
        >
          <div
            className="ms-Persona-coin ms-Persona--size32 coin-10"
            role="presentation"
          >
            <div
              className="ms-Persona-imageArea imageArea-12"
              role="presentation"
            >
              <div
                aria-hidden="true"
                className="ms-Persona-initials initials-15"
              >
                <span>
                  J
                </span>
              </div>
            </div>
          </div>
          <div
            className="ms-Persona-details details-4"
          >
            <div
              className="ms-Persona-primaryText primaryText-5"
              dir="auto"
            >
              <div
                className="ms-TooltipHost root-18"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Jim
              </div>
            </div>
            <div
              className="ms-Persona-secondaryText secondaryText-6"
              dir="auto"
            />
            <div
              className="ms-Persona-tertiaryText tertiaryText-7"
              dir="auto"
            />
            <div
              className="ms-Persona-optionalText optionalText-8"
              dir="auto"
            />
          </div>
        </div>
        <div
          className="ms-Stack css-69 css-19"
        />
        <span
          className="ms-layer"
        >
          <div
            className="ms-Fabric ms-Layer-content content-43"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onDrag={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragExit={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onSubmit={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="ms-Callout-container container-45"
              style={
                Object {
                  "visibility": "hidden",
                }
              }
            >
              <div
                className="ms-Callout ms-ContextualMenu-Callout root-46"
                hidden={true}
                onScroll={[Function]}
                style={
                  Object {
                    "filter": "opacity(0)",
                    "opacity": 0,
                    "pointerEvents": "none",
                  }
                }
                tabIndex={-1}
              >
                <div
                  className="ms-Callout-main calloutMain-49"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onScroll={[Function]}
                  style={
                    Object {
                      "maxHeight": 752,
                      "outline": "none",
                      "overflowY": undefined,
                    }
                  }
                >
                  <div
                    className="ms-ContextualMenu-container container-21"
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      className="ms-FocusZone css-50 ms-ContextualMenu is-open root-20"
                      data-focuszone-id="FocusZone3"
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDownCapture={[Function]}
                    >
                      <ul
                        className="ms-ContextualMenu-list is-open list-22"
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        role="menu"
                      >
                        <li
                          className="ms-ContextualMenu-item item-25"
                          role="presentation"
                        >
                          <button
                            aria-disabled={false}
                            aria-posinset={1}
                            aria-setsize={2}
                            className="ms-ContextualMenu-link root-27"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            role="menuitem"
                          >
                            <div
                              className="ms-ContextualMenu-linkContent linkContent-31"
                            >
                              <span
                                className="ms-ContextualMenu-itemText label-37"
                              >
                                Mute
                              </span>
                            </div>
                          </button>
                        </li>
                        <li
                          className="ms-ContextualMenu-item item-25"
                          role="presentation"
                        >
                          <button
                            aria-disabled={false}
                            aria-posinset={2}
                            aria-setsize={2}
                            className="ms-ContextualMenu-link root-27"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            role="menuitem"
                          >
                            <div
                              className="ms-ContextualMenu-linkContent linkContent-31"
                            >
                              <span
                                className="ms-ContextualMenu-itemText label-37"
                              >
                                Remove
                              </span>
                            </div>
                          </button>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ReadReceipt Read Reciept Icon Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-TooltipHost root-2"
        onBlurCapture={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          aria-hidden={true}
          className="root_de478240 css-64"
          role="presentation"
          style={Object {}}
        >
          <svg
            className="svg_de478240"
            viewBox="0 0 2048 2048"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1491 595l90 90-749 749-365-365 90-90 275 275 659-659zM1024 0q141 0 272 36t245 103 207 160 160 208 103 245 37 272q0 141-36 272t-103 245-160 207-208 160-245 103-272 37q-141 0-272-36t-245-103-207-160-160-208-103-244-37-273q0-141 36-272t103-245 160-207 208-160T751 37t273-37zm0 1920q123 0 237-32t214-90 182-141 140-181 91-214 32-238q0-123-32-237t-90-214-141-182-181-140-214-91-238-32q-123 0-237 32t-214 90-182 141-140 181-91 214-32 238q0 123 32 237t90 214 141 182 181 140 214 91 238 32z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/SendBox Send Box Story Book Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": "480px",
          }
        }
      >
        <div
          className="ms-Stack css-54 css-2"
        >
          <div
            className="ms-TextField ms-TextField--multiline css-53 root-4"
          >
            <div
              className="ms-TextField-wrapper wrapper-5"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-6"
              >
                <textarea
                  aria-invalid={false}
                  aria-label="Type"
                  className="ms-TextField-field ms-TextField--unresizable css-55 field-7"
                  id="sendbox"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Type a new message"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="css-57 sendIconWrapper"
            onClick={[Function]}
          >
            <div
              className="css-58"
            />
          </div>
        </div>
        <div
          className="ui-alert al am an ao ap aq ar as at au av aw ax ay az ba bb bc bd be bf bg bh bi bj"
          data-uses-unhanded-props={true}
          onFocus={[Function]}
        >
          <div
            className="ui-box al bk ui-alert__body"
            data-uses-unhanded-props={true}
            id="alert-body-1"
          >
            <div
              className="ui-box bk ui-alert__content"
              data-uses-unhanded-props={true}
              dir="auto"
            >
              Please wait 30 seconds to send new messages
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/TypingIndicator Typing Indicator Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="css-59"
      >
        <span
          className="css-60"
        >
          User1, 
        </span>
        <span
          className="css-60"
        >
          User2
        </span>
        <span
          className="css-60"
        >
           and 5 others are typing...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/VideoTile Video Tile Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className="ms-Stack css-3"
      >
        <div
          className="ms-Stack css-4"
          style={
            Object {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <div
            className="ms-Persona ms-Persona--size100 root-5"
          >
            <div
              className="ms-Persona-coin ms-Persona--size100 coin-12"
              role="presentation"
            >
              <div
                className="ms-Persona-imageArea imageArea-14"
                role="presentation"
              >
                <div
                  aria-hidden="true"
                  className="ms-Persona-initials initials-17"
                >
                  <span>
                    JK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Composites/GroupCall Group Call Composite 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "margin": "20px auto",
            "maxHeight": "35rem",
            "maxWidth": "50rem",
            "width": "100%",
          }
        }
      >
        
        Please fill in Connection String to run group call widget.
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Composites/GroupChat Group Chat Composite 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "border": "1px solid",
            "height": "100%",
            "margin": "20px auto",
            "maxHeight": "30rem",
            "maxWidth": "50rem",
            "padding": "0 10px",
            "width": "100%",
          }
        }
      >
        Please fill in Connection String or required params to run GroupChat.
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Composites/OneToOneCall One To One Call Composite Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-52 root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="css-52"
      data-uses-unhanded-props={true}
      dir="ltr"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "height": "90vh",
            "width": "90vw",
          }
        }
      >
        
        <div
          className="ms-Stack css-2"
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Please enter required information below.
        </div>
      </div>
    </div>
  </div>
</div>
`;
